[package]
name = "VulkanLoaderRust"
version = "1.3.298"
edition = "2021"
description = "Rust Vulkan Loader based on earthtraveller1/Vulkan-Loader-sys-rs"
homepage = "https://vulkan.org"
documentation = "https://registry.khronos.org/vulkan/specs/1.3-extensions/html/index.html"
keywords = ["graphics", "vulkan", "ffi", "bindgens", "khronosgroup"]
categories = ["graphics", "external-ffi-bindings"]

[dependencies]

[build-dependencies]
cmake = "0.1.51"
bindgen = "0.70.1"

[dev-dependencies]
glfw = {version = "0.58.0", features = ["vulkan", "image", "glfw-sys"]}